Adding java 9 property and some formatting.
Adding java 9 property and some formatting.