@@ -6,9 +6,9 @@ public class M08 {
 		String s2 = "gh";
 		String s3 = "abc";
 
-		Boolean b1 = new Boolean(s1);
-		Boolean b2 = new Boolean(s2);
-		Boolean b3 = new Boolean(s3);
+		Boolean b1 = Boolean.valueOf(s1);
+		Boolean b2 = Boolean.valueOf(s2);
+		Boolean b3 = Boolean.valueOf(s3);
 
 		boolean b4 = b1.booleanValue();
 		boolean b5 = b2.booleanValue();
